@@ -2,7 +2,6 @@ import configparser
 import sys, os
 
 #import instrument as inst
-
 from . import spitzer as s
 from . import tools as pt
 
@@ -11,9 +10,22 @@ def init(cfile):
   """
   Parse variables from a configuration file into a dictionary.
   """
-  args = parse(cfile)
+  # Parse variables from a configuration file into a dictionary.
+  config = configparser.ConfigParser()
+  config.optionxform=str
+  config.read([cfile])
 
-  # FINDME: check args contains "telescope"
+  if "PUPPIES" not in config.sections():
+    pt.error("Invalid configuration file: '{:s}', no [PUPPIES] section.".
+             format(cfile))
+  # Extract inputs:
+  args = dict(config.items("PUPPIES"))
+
+  # Check args contains "telescope":
+  if "telescope" not in args.keys():
+    pt.error("Invalid configuration file: '{:s}', no 'telescope' parameter.".
+             format(cfile))
+
   if args["telescope"] == "spitzer":
     pup = s.Pup(args)
   elif args["telescope"] == "cheops":
@@ -24,23 +36,6 @@ def init(cfile):
   return pup
 
 
-def parse(cfile):
-  """
-  Parse variables from a configuration file into a dictionary.
-  """
-  config = configparser.ConfigParser()
-  config.optionxform=str
-  config.read([cfile])
-
-  if "puppy" not in config.sections():
-    pt.error("Invalid configuration file: '{:s}', no [puppy] section.".
-             format(args.cfile))
-
-  # Extract inputs:
-  args = dict(config.items("puppy"))
-  return args
-
-
 def run(args):
   runmode = pt.parray(args["runmode"])
   nsteps = len(runmode)
@@ -49,7 +44,7 @@ def run(args):
     pup = s.Pup(args)
   else:
     pup = ls.load(args["pickle"]) # Load object
-    update(pup, )
+    update(pup)
 
   for i in np.arange(nsteps):
     if runmode[i] == "badpix":
